# WorkflowOps

./: CLAUDE.md  Dockerfile  README 2.md  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
examples/: batch_evaluation.py  openai_integration.py
examples/examples/: anthropic_integration.py
server/: Dockerfile  __init__.py  app.py  dataset_loader.py  environment.py  grader.py  metrics.py  requirements.txt  tasks.py
server/static/: index.html
tests/: test_endpoints.py  test_grader.py  test_tasks.py
workflowops/: README.md  __init__.py  app.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run_groq.sh
workflowops/environment/: base.py
workflowops/graders/: base.py
workflowops/server/: Dockerfile  __init__.py  app.py  workflowops_environment.py
workflowops/static/: index.html
workflowops/tasks/: email_triage.py  schedule_conflict.py  support_ticket.py
