[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hallucination-guard-env"
version = "4.2.0"
description = "Production RL environment for training LLMs on hallucination avoidance — 1M+ examples across 38 datasets"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "HallucinationGuard-Env Contributors"}
]
keywords = [
    "openenv",
    "reinforcement-learning",
    "hallucination-detection",
    "question-answering",
    "ai-safety"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "requests>=2.31.0",
    "huggingface_hub>=0.20.0",
    "datasets>=2.14.0",
    "sentence-transformers>=2.7.0,<3.0.0",
    "transformers>=4.35.0,<5.0.0",
    "numpy>=1.24.0,<2.0.0",
    "protobuf>=3.20.0,<5.0.0",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "pydantic>=2.0.0",
    "aiofiles>=23.0.0",
    "python-json-logger>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/SamSankar/hallucination-guard-env"
Repository = "https://github.com/SS-360/hallucination-guard-env"
Documentation = "https://samsankar-hallucination-guard-env.hf.space/docs"

[tool.hatch.build.targets.wheel]
packages = ["server", "models.py", "client.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
