[project]
name = "AutoClean-AI"
version = "1.0.0"
description = "OpenEnv environment for AI data cleaning tasks"
authors = [
  { name = "WorkflowOps" }
]
license = { file = "LICENSE" }
dependencies = [
  "openenv-core>=0.2.0",
  "fastapi>=0.100.0",
  "uvicorn>=0.23.0",
  "requests>=2.31.0",
  "openai>=1.0.0"
]

[tool.openenv]
version = ">=0.2.0"

[project.scripts]
server = "server.app:main"
